<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shoppit</string>
    <string name="app_id">139737752895011</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="nearby_items">Nearby items:</string>
    <string name="soty_by">Sort by:</string>
    <string name="categ">Categories:</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="barcode">Barcode</string>
    <string name="skip">Skip</string>
    <string name="action_search">Search</string>
    <string name="user_info">User Information</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signUp">Sign up</string>
    <string name="logIn">Log in</string>
    <string name="info">Personal Information</string>
    <!-- <string name="logout">Log Out</string> -->
    <string name="add">Add an Item</string>
    <string name="take_pic">Item Picture</string>
    <string name="item_info">Item Information</string>
    <string name="done">Done</string>
    <string name="shops">Shops</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="item_label">Add an Item</string>
    <string name="shop_label">Add a New Shop</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="post_comment">Post Comment</string>
    <string name="post">Post</string>
    <string name="enter_comment_hint">Enter commment&#8230;</string>
    <string name="search_hint">Search items or shops</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>
    <string name="share">Share</string>
    <string name="report">Report</string>
    <string name="keyword_hint">(Optional) space separated</string>
    <string name="show_on_map">Show on map</string>
    <string name="shop_name">Shop name</string>
    <string name="description">Description</string>
    <string name="optional_hint">(Optional)</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="show_results_on_map">Show results on map</string>
    <string name="currency">Currency</string>
    <string name="sort_by_distance">Sort by distance</string>
    <string name="sort_by_price">Sort by price</string>
    <string name="sort_by_likes">Sort by likes</string>

    <string-array name="sort_options">
        <item>Cheapest</item>
        <item>Closest</item>
        <item>Newest</item>
    </string-array>
    <!--
         <string-array name="currencies_array">
        <item>USD ($)</item>
        <item>NIS (₪)</item>
        <item>GBP (£)</item>
        <item>EUR (€)</item>
    </string-array>
    -->
    <string-array name="pref_currency_entries">
        <item>USD ($)</item>
        <item>NIS (₪)</item>
        <item>GBP (£)</item>
        <item>EUR (€)</item>
    </string-array>
    <string-array name="pref_currency_values">
        <item>$</item>
        <item>₪</item>
        <item>£</item>
        <item>€</item>
    </string-array>

    <!-- navbar -->


    <!--
         <string-array name="general_navbar_array">
        <item><string name="shops">Shops</string></item>
        <item><string name="add_shop">Add Shop</string></item>
        <item><string name="settings">Settings</string></item>
        <item><string name="profile">Profile</string></item>
        <item><string name="logout">Log out</string></item>
    </string-array>
    -->

    <string name="shops">Shops</string>
    <string name="add_shop">Add Shop</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="logout">Log out</string>
    <string name="all">All</string>

    <string-array name="categories_array">
        <item>Food</item>
        <item>Clothes</item>
        <item>Books</item>
        <item>Electronics</item>
        <item>Other</item>
    </string-array>
    <!--
         <string-array name="currencies_array">
        <item>NIS</item>
        <item>USD</item>
        <item>GBP</item>
    </string-array>
    -->
    <string-array name="report_reasons_array">
        <item>Sexual content</item>
        <item>Spam or misleading</item>
        <item>Hateful or abusive</item>
        <item>Fake item</item>
        <item>Other</item>
    </string-array>
    <string-array name="location_options_array">
        <item>Current location</item>
    </string-array>
    <string-array name="sort_by_array">
        <item name="nearby">Nearby</item>
        <item name="cheapest">Cheapest</item>
        <item name="most_liked">Most liked</item>
    </string-array>
    <string-array name="profile_options_array">
        <item name="items_posted">Items posted</item>
        <item name="items_liked">Items liked</item>
        <item name="items_posted_on">Items commented on</item>
    </string-array>

    <string name="title_activity_main_activity_new">Welcome</string>
    <string name="title_activity_search_results">Search results</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_item">Item</string>
    <string name="title_activity_nav_drawer">Navigation Drawer</string>
    <string name="title_activity_shop">Shop</string>
    <string name="title_activity_new_item">New item</string>
    <string name="title_activity_new_shop">New shop</string>
    <string name="title_activity_comment_dialog">Comment</string>
    <string name="title_activity_login_dialog_fragment">Log in</string>
    <string name="title_activity_map">Map</string>
    <string name="image">Image</string>
    <string name="add_photo">Add photo</string>
    <string name="location">Location</string>
    <string name="keywords">Keywords</string>
    <string name="item_image_preview">item image preview</string>
    <string name="add_new_item">Add New Item</string>

</resources>